config/clusters/dev/grafana/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-lb
  namespace: grafana
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
